# AD_RAG

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  credentials.yaml  docker-compose.yml  entrypoint.sh  init-db.sql  main.py  pyproject.toml  requirements.txt  streamlit_app.py
auth/: core.py  generate_credentials.py
config/: backend_config.py  logging.yaml  settings.py
database/: chat_manager.py  init_db.py
embeddings/: embedder.py  indexer.py  vector_store.py
evaluation/: __init__.py  ground_truth_generator.py  llm_evaluator.py  schemas.py
generation/: generator.py
generation/api/: dependencies.py  schemas.py
generation/api/routers/: admin.py  chat.py  evaluation.py  ingest.py  prompts.py  query.py  rerank.py
ingestion/: chunker.py  docling_loader.py  ingest_service.py
llm/: llm_base.py  llm_ollama.py  llm_openai.py
observability/: arize_setup.py  cost_tracker.py  phoenix_tracer.py  prompt_tracking.py  retrieval_tracking.py
retrieval/: reranker_pointwise.py  retrieval_pipeline.py  retriever.py
